--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteRule ^(([^/]+/)*[^.]+)$ /$1.php [L]
 AddDefaultCharset utf-8
 DirectoryIndex index.php
-<FilesMatch ".(jpg|png|js|css|ttf|JPG)$">
+<FilesMatch ".(jpg|png|js|css|php|ttf|JPG)$">
   Header set Cache-Control "max-age=2592000"
 </FilesMatch>
